# FastAPIPhotoVideoSharing

./: .gitignore  README.md  pyproject.toml
app/: app.py
